syntax = "proto3";

option go_package = ".";

service ProductService {
  rpc CreateProduct(Product) returns (Product);
  rpc UpdateProduct(Product) returns (Product);
  rpc DeleteProduct(DeleteProductRequest) returns (CheckResponse);
  rpc GetProduct(GetProductRequest) returns (Product);
  rpc ListProduct(GetAllRequest) returns (GetAllResponse);
}

message Product{
  int64 id = 1;
  string title = 2;
  string description = 3;
  int64 price = 4;
  int64 discount = 5;
  string picture = 6;
  int64 categoryId = 7;
  string createdAt = 8;
  string updatedAt = 9;
  string deletedAt = 10;
}

message Category{
  int64 id = 1;
  string name = 2;
  int64 ownerId = 3;
  string picture = 4;
  string createdAt = 5;
  string updatedAt =6;
  string deletedAt = 7;
}

message DeleteProductRequest {
  int64 id = 1;
}

message GetProductRequest{
  int64 id = 1;
}

message GetAllRequest{
  int64 page = 1;
  int64 limit = 2;
}

message GetAllResponse{
  repeated Product products = 1;
}

message CheckResponse{
  bool check = 1;
}
